# PaperMind

./: .env.example  .gitattributes  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
artifacts/api-server/src/: app.ts
artifacts/jarvis/: index.html  package.json  vite.config.ts
artifacts/jarvis/src/: App.tsx  index.css
artifacts/jarvis/src/components/: AnimatedHero.tsx  ChatInput.tsx  DocumentPanel.tsx  GradientMesh.tsx  MessageBubble.tsx  RouteBadge.tsx
artifacts/jarvis/src/components/ui/: badge.tsx  button.tsx
artifacts/jarvis/src/lib/: api.ts
artifacts/jarvis/src/pages/: ChatPage.tsx  not-found.tsx
artifacts/mockup-sandbox/: vite.config.ts
backend/: pytest.ini  requirements.txt
backend/app/: config.py  documents.py  graph.py  llm.py  main.py  vectorstore.py  web_search.py
backend/tests/: conftest.py  test_documents.py  test_rag.py  test_router.py
scripts/: post-merge.sh
